--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -410,103 +410,103 @@
     <string name="hints_garbage_cleanup_result_safe">Sicuro</string>
     <string name="hints_garbage_cleanup_result_risk">Rischioso</string>
     <string name="hints_garbage_cleanup_result_danger">Pericoloso</string>
-    <string name="toast_garbage_list_empty">Everything looks good, no need to clean!</string>
-    <string name="hints_quick_cleanning">Cleaning…</string>
-    <string name="hints_finish_quick_scan">Scan done</string>
-    <string name="hints_finish_quick_cleanup">Finish cleaning up</string>
-    <string name="hints_finish_quick_cleanup_title">Finish cleaning up %s trash</string>
-    <string name="pref_category_title_cleanup_white_list">Trash cleanup white list</string>
-    <string name="pref_title_cleanup_white_list">Trash cleanup white list</string>
-    <string name="pref_summary_cleanup_white_list">Trash in white list will be ignored</string>
-    <string name="pref_category_title_auto_update_cleanup_db">Cleanup database update settings</string>
-    <string name="pref_title_auto_update_cleanup_db">Auto update</string>
-    <string name="pref_summary_auto_update_cleanup_db">Update on: %s</string>
-    <string name="pref_title_manual_check_cleanup_db_update">Update now</string>
-    <string name="pref_category_title_garbage_cleanup_check">Cleanup settings</string>
-    <string name="pref_title_garbage_cleanup_check_time">Trash alarm</string>
-    <string name="pref_summary_garbage_cleanup_check_time">Notify me when time reaches a certain interval</string>
-    <string name="pref_summary_garbage_cleanup_check_size">Notify me when Trash reaches a certain size</string>
-    <string name="pref_title_garbage_cleanup_check_size">Trash alarm size</string>
-    <string name="pref_title_expand_cache_group">Expand the cache groups</string>
-    <string name="pref_summary_expand_cache_group">Groups in the cache list will default expand</string>
-    <string name="msg_cleanup_db_update_checking">Checking…</string>
-    <string name="msg_update_error_code_success">Update finished</string>
-    <string name="msg_update_error_code_no_newer_db">Up-to-date</string>
-    <string name="msg_update_error_code_already_running">Updating</string>
-    <string name="msg_update_error_code_network_error">Network error</string>
-    <string name="msg_update_error_code_unknown_error">Unknown error</string>
-    <string name="msg_cleanup_db_update_time_unknown">Updated on: unknown</string>
-    <string name="notification_title_of_garbage_cleanup">Trash size warning</string>
-    <string name="notification_summary_of_garbage_cleanup">Whoa there! Your trash is over %s.</string>
-    <string name="item_garbage_time_daily">Daily</string>
-    <string name="item_garbage_time_3d">Every 3 days</string>
-    <string name="item_garbage_time_7d">Every 7 days</string>
-    <string name="item_garbage_time_never">Never</string>
+    <string name="toast_garbage_list_empty">"Sembra tutto a posto, non c'è bisogno di fare pulizia!"</string>
+    <string name="hints_quick_cleanning">Pulizia…</string>
+    <string name="hints_finish_quick_scan">Scansione terminata</string>
+    <string name="hints_finish_quick_cleanup">Pulizia terminata</string>
+    <string name="hints_finish_quick_cleanup_title">Pulizia di %s dal cestino completata</string>
+    <string name="pref_category_title_cleanup_white_list">Lista eccezioni pulizia</string>
+    <string name="pref_title_cleanup_white_list">Lista eccezioni pulizia</string>
+    <string name="pref_summary_cleanup_white_list">I contenuti nella lista eccezioni saranno ignorati</string>
+    <string name="pref_category_title_auto_update_cleanup_db">Impostazioni aggiornamento database pulizia</string>
+    <string name="pref_title_auto_update_cleanup_db">Aggiornamento automatico</string>
+    <string name="pref_summary_auto_update_cleanup_db">Aggiorna alle: %s</string>
+    <string name="pref_title_manual_check_cleanup_db_update">Aggiorna ora</string>
+    <string name="pref_category_title_garbage_cleanup_check">Impostazioni pulizia</string>
+    <string name="pref_title_garbage_cleanup_check_time">Allarme cestino</string>
+    <string name="pref_summary_garbage_cleanup_check_time">Notificami quando è trascorso un certo intervallo di tempo</string>
+    <string name="pref_summary_garbage_cleanup_check_size">Notificami quando il cestino raggiungono una certa dimensione</string>
+    <string name="pref_title_garbage_cleanup_check_size">Dimensione per allarme cestino</string>
+    <string name="pref_title_expand_cache_group">Espandi i gruppi della cache</string>
+    <string name="pref_summary_expand_cache_group">I gruppi nella lsita cache saranno espansi in automatico</string>
+    <string name="msg_cleanup_db_update_checking">Verifica…</string>
+    <string name="msg_update_error_code_success">Aggiornamento completato</string>
+    <string name="msg_update_error_code_no_newer_db">Aggiornato</string>
+    <string name="msg_update_error_code_already_running">Aggiornamento</string>
+    <string name="msg_update_error_code_network_error">Errore di rete</string>
+    <string name="msg_update_error_code_unknown_error">Errore sconosciuto</string>
+    <string name="msg_cleanup_db_update_time_unknown">Aggiornato il: sconosciuto</string>
+    <string name="notification_title_of_garbage_cleanup">Avviso dimensione cestino</string>
+    <string name="notification_summary_of_garbage_cleanup">Ehi attenzione! Il cestino è oltre %s.</string>
+    <string name="item_garbage_time_daily">Ogni giorno</string>
+    <string name="item_garbage_time_3d">Ogni 3 giorni</string>
+    <string name="item_garbage_time_7d">Ogni 7 giorni</string>
+    <string name="item_garbage_time_never">Mai</string>
     <string name="item_garbage_size_100m">100M</string>
     <string name="item_garbage_size_300m">300M</string>
     <string name="item_garbage_size_500m">500M</string>
     <string name="item_garbage_size_1000m">1G</string>
-    <string name="item_title_garbage_time">Alarm time</string>
-    <string name="item_title_garbage_size">Alarm size</string>
-    <string name="white_list_cache_header">Cached files: %d</string>
-    <string name="white_list_ad_header">Ad files: %d</string>
-    <string name="white_list_apk_header">Install packages: %d</string>
-    <string name="white_list_large_file_header">Large files: %d</string>
-    <string name="white_list_residual_header">Residuals: %d</string>
-    <string name="white_list_title">White List</string>
-    <string name="button_text_delete_from_white_list">Remove</string>
-    <string name="toast_add_white_list_success">" added to exceptions"</string>
-    <string name="empty_title_garbage_white_list">Empty</string>
-    <string name="toast_removed_from_white_list">" removed from exceptions"</string>
-    <string name="activity_title_white_list">Exceptions</string>
-    <string name="empty_title_garbage_cache">Cache empty</string>
-    <string name="empty_title_ad">No ad files found</string>
-    <string name="empty_title_apk">No install packages found</string>
-    <string name="empty_title_residual">No residuals found</string>
-    <string name="toast_garbage_cleanup_success">Clean up success</string>
-    <string name="hints_cache_header_left">Cache files: %d</string>
-    <string name="hints_ad_header_left">Ad files: %d</string>
-    <string name="hints_apk_header_left">Install packages: %d</string>
-    <string name="hints_large_file_header_left">Large files: %d</string>
-    <string name="hints_residual_header_left">Residuals: %d</string>
-    <string name="hints_installed_apps_header_left">Installed apps: %d</string>
-    <string name="deepclean_cache_header_left">Cache files: %d</string>
-    <string name="hints_loading_text">Loading…</string>
-    <string name="dialog_msg_check_all">Confirm to select %1$s that contains %2$d items</string>
-    <string name="dialog_title_check_all">Select all</string>
-    <string name="button_text_add_to_white_list">Add to exceptions</string>
-    <string name="button_text_cleanup">Clean up</string>
-    <string name="button_text_install">Install</string>
-    <string name="hints_apk_version">Version: %s</string>
-    <string name="apk_status_uninstalled">Not installed</string>
-    <string name="apk_status_installed_old">Old version</string>
-    <string name="apk_status_install">Installed</string>
-    <string name="apk_status_duplicate">Duplicate</string>
-    <string name="apk_status_damage">Corrupted</string>
-    <string name="hints_app_uninstall_residual">Clean up residual uninstall files?</string>
-    <string name="button_text_cancel">Cancel</string>
-    <string name="hints_residual_tips">%s residual files found on SD card</string>
-    <string name="notification_button_text_of_low_memory">Clean-up</string>
-    <string name="notification_title_of_low_memory">System storage used: %s</string>
-    <string name="notification_summary_of_low_memory">When memory is low, will not install new apps</string>
-    <string name="activity_title_large_file">Large files</string>
-    <string name="activity_title_uninstall_apps">Apps</string>
-    <string name="button_text_uninstall_only">Uninstall</string>
-    <string name="button_text_backup_uninstall">Back up and uninstall</string>
-    <string name="dialog_title_uninstall_apps">Uninstall</string>
-    <string name="dialog_title_backup_and_uninstall_apps">Backup and uninstall</string>
-    <string name="dialog_msg_uninstall_apps">Uninstall these apps?</string>
-    <string name="dialog_msg_backup_and_uninstall_apps">Backup and uninstall the selected apps?</string>
-    <string name="uninstall_confirm_title">Uninstall this app</string>
-    <string name="button_text_uninstall">Uninstall</string>
-    <string name="hints_install_apps_today">used today</string>
-    <string name="hints_install_apps_interval">used %d days ago</string>
-    <string name="hints_install_apps_new">never used</string>
-    <string name="hints_install_apps_virus">virus detected</string>
-    <string name="hints_install_apps_risk">risk detected</string>
-    <string name="empty_title_large_files">empty</string>
-    <string name="empty_title_installed_apps">empty</string>
-    <string name="apps_sort_type_title">Sort</string>
+    <string name="item_title_garbage_time">Orario allarme</string>
+    <string name="item_title_garbage_size">Dimensione allarme</string>
+    <string name="white_list_cache_header">File in cache: %d</string>
+    <string name="white_list_ad_header">Pubblicità: %d</string>
+    <string name="white_list_apk_header">Pacchetti di installazione: %d</string>
+    <string name="white_list_large_file_header">File grandi: %d</string>
+    <string name="white_list_residual_header">Residui: %d</string>
+    <string name="white_list_title">Lista eccezioni</string>
+    <string name="button_text_delete_from_white_list">Rimuovi</string>
+    <string name="toast_add_white_list_success">" aggiunto alle eccezioni"</string>
+    <string name="empty_title_garbage_white_list">Vuota</string>
+    <string name="toast_removed_from_white_list">" rimosso dalle eccezioni"</string>
+    <string name="activity_title_white_list">Eccezioni</string>
+    <string name="empty_title_garbage_cache">Cache vuota</string>
+    <string name="empty_title_ad">Nessuna pubblicità trovata</string>
+    <string name="empty_title_apk">Nessun pacchetto di installazione trovato</string>
+    <string name="empty_title_residual">Nessun residuo trovato</string>
+    <string name="toast_garbage_cleanup_success">Pulizia completata</string>
+    <string name="hints_cache_header_left">File in cache: %d</string>
+    <string name="hints_ad_header_left">Pubblicità: %d</string>
+    <string name="hints_apk_header_left">Pacchetti di installazione: %d</string>
+    <string name="hints_large_file_header_left">File grandi: %d</string>
+    <string name="hints_residual_header_left">Residui: %d</string>
+    <string name="hints_installed_apps_header_left">App installate: %d</string>
+    <string name="deepclean_cache_header_left">File in cache: %d</string>
+    <string name="hints_loading_text">Caricamento…</string>
+    <string name="dialog_msg_check_all">Conferma la selezione di %1$s che contiene %2$d elementi</string>
+    <string name="dialog_title_check_all">Seleziona tutto</string>
+    <string name="button_text_add_to_white_list">Aggiungi alle eccezioni</string>
+    <string name="button_text_cleanup">Pulizia</string>
+    <string name="button_text_install">Installla</string>
+    <string name="hints_apk_version">Versione: %s</string>
+    <string name="apk_status_uninstalled">Non installata</string>
+    <string name="apk_status_installed_old">Vecchia versione</string>
+    <string name="apk_status_install">Installata</string>
+    <string name="apk_status_duplicate">Duplicata</string>
+    <string name="apk_status_damage">Corrotta</string>
+    <string name="hints_app_uninstall_residual">Pulire i resti della disinstallazione delle app?</string>
+    <string name="button_text_cancel">Annulla</string>
+    <string name="hints_residual_tips">%s file residui trovati sulla scheda SD</string>
+    <string name="notification_button_text_of_low_memory">Pulizia</string>
+    <string name="notification_title_of_low_memory">Spazio di sistema usato: %s</string>
+    <string name="notification_summary_of_low_memory">Quando la memoria è in esaurimento, non saranno installate nuove app</string>
+    <string name="activity_title_large_file">Grandi file</string>
+    <string name="activity_title_uninstall_apps">App</string>
+    <string name="button_text_uninstall_only">Disinstalla</string>
+    <string name="button_text_backup_uninstall">Esegui backup e disinstalla</string>
+    <string name="dialog_title_uninstall_apps">Disinstalla</string>
+    <string name="dialog_title_backup_and_uninstall_apps">Backup e disinstallazione</string>
+    <string name="dialog_msg_uninstall_apps">Disinstallare queste app?</string>
+    <string name="dialog_msg_backup_and_uninstall_apps">Eseguire il backup e quindi disinstallare queste app?</string>
+    <string name="uninstall_confirm_title">Disinstalla queste app</string>
+    <string name="button_text_uninstall">Disinstalla</string>
+    <string name="hints_install_apps_today">usata oggi</string>
+    <string name="hints_install_apps_interval">usata %d giorni fa</string>
+    <string name="hints_install_apps_new">mai usata</string>
+    <string name="hints_install_apps_virus">rilevato virus</string>
+    <string name="hints_install_apps_risk">rilevato un rischio</string>
+    <string name="empty_title_large_files">vuoto</string>
+    <string name="empty_title_installed_apps">vuoto</string>
+    <string name="apps_sort_type_title">Ordina</string>
     <string name="apps_sort_type_item_time">Frequently used</string>
     <string name="apps_sort_type_item_size">Size</string>
     <string name="hints_no_info">No info</string>
