SecurityCenter.apk - Finished

--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -507,88 +507,88 @@
     <string name="empty_title_large_files">vuoto</string>
     <string name="empty_title_installed_apps">vuoto</string>
     <string name="apps_sort_type_title">Ordina</string>
-    <string name="apps_sort_type_item_time">Frequently used</string>
-    <string name="apps_sort_type_item_size">Size</string>
-    <string name="hints_no_info">No info</string>
-    <string name="large_file_sort_type_size">Sort by size</string>
-    <string name="large_file_sort_type_name">Sort by name</string>
-    <string name="button_text_view_detail">Details</string>
+    <string name="apps_sort_type_item_time">"Frequenza d'uso"</string>
+    <string name="apps_sort_type_item_size">Dimensione</string>
+    <string name="hints_no_info">Nessuna info</string>
+    <string name="large_file_sort_type_size">Ordina per dimensione</string>
+    <string name="large_file_sort_type_name">Ordina per nome</string>
+    <string name="button_text_view_detail">Dettagli</string>
     <string name="button_text_view_file">File</string>
-    <string name="toast_app_no_residual_on_sdcard">"The app doesn't have any files stored on your SD card"</string>
-    <string name="button_text_start_optimize">Check</string>
-    <string name="button_text_cancel_optimize">Cancel</string>
-    <string name="button_text_cancel_clean">Cancel</string>
-    <string name="button_text_quick_clean">Optimize</string>
-    <string name="activity_title_perm_manager">License management</string>
-    <string name="activity_title_auto_start_manager">Autostart</string>
-    <string name="activity_title_notification_bar_manager">Notifications</string>
-    <string name="activity_title_default_apps_manager">Default apps</string>
-    <string name="activity_title_permission_manager">Permissions</string>
-    <string name="activity_title_root_manager">Root access</string>
-    <string name="empty_title_auto_start_list">No auto start apps</string>
-    <string name="dialog_title_load_cleanup_engine_error">Something went wrong</string>
-    <string name="dialog_msg_load_cleanup_engine_error">Cleaner engine has been corrupted.</string>
-    <string name="hints_auto_start_warning_info">Forbid autostart will not receive any message</string>
-    <string name="hints_auto_start_enable_title">%d apps can autostart</string>
-    <string name="hints_auto_start_disable_title">"%d apps aren't allowed to autostart"</string>
-    <string name="activity_title_apps_manager">Apps</string>
-    <string name="activity_title_permissions_manager">Permissions</string>
-    <string name="dialog_title_auto_start_declare">About autostart</string>
-    <string name="dialog_msg_auto_start_declare">Some security apps may incorrectly indicate that MIUI has prevented them from starting. To check the permissions that have been granted to individual apps, go to Settings > Apps.</string>
+    <string name="toast_app_no_residual_on_sdcard">"L'applicazione non ha nessun file salvato sulla tua scheda SD"</string>
+    <string name="button_text_start_optimize">Verifica</string>
+    <string name="button_text_cancel_optimize">Annulla</string>
+    <string name="button_text_cancel_clean">Annulla</string>
+    <string name="button_text_quick_clean">Ottimizza</string>
+    <string name="activity_title_perm_manager">Gestione licenze</string>
+    <string name="activity_title_auto_start_manager">Avvio automatico</string>
+    <string name="activity_title_notification_bar_manager">Notifiche</string>
+    <string name="activity_title_default_apps_manager">App predefinite</string>
+    <string name="activity_title_permission_manager">Permessi</string>
+    <string name="activity_title_root_manager">Accesso come root</string>
+    <string name="empty_title_auto_start_list">Nessuna app in avvio automatico</string>
+    <string name="dialog_title_load_cleanup_engine_error">"E' andato storto qualcosa"</string>
+    <string name="dialog_msg_load_cleanup_engine_error">Il motore di pulizia è stato corrotto.</string>
+    <string name="hints_auto_start_warning_info">"Non si riceverà nessun avviso per le app a cui è stato negato l'avvio automatico"</string>
+    <string name="hints_auto_start_enable_title">%d app possono avviarsi in automatico</string>
+    <string name="hints_auto_start_disable_title">"%d app non possono avviarsi in automatico"</string>
+    <string name="activity_title_apps_manager">App</string>
+    <string name="activity_title_permissions_manager">Permessi</string>
+    <string name="dialog_title_auto_start_declare">"Info sull'avvio automatico"</string>
+    <string name="dialog_msg_auto_start_declare">Alcune app di sicurezza potrebbero indicare erroneamente the MIUI sta impedendo alle app di avviarsi. Per verificare i permessi che sono stati concessi alle singole app, vai in Impostazioni -> Applicazioni</string>
     <string name="button_text_known">OK</string>
-    <string name="empty_title_perm_apps">Empty</string>
-    <string name="hints_apps_perm_count">%d permissions</string>
+    <string name="empty_title_perm_apps">Vuoto</string>
+    <string name="hints_apps_perm_count">%d permessi</string>
     <string name="permission_group_title_charges_related">Charges</string>
     <string name="permission_group_title_privacy_related">Privacy</string>
     <string name="permission_group_title_media_related">Multimedia</string>
-    <string name="permission_group_title_settings_related">Settings</string>
-    <string name="permission_group_title_others">Others</string>
-    <string name="permission_action_accept">Accept</string>
-    <string name="permission_action_prompt">Prompt</string>
-    <string name="permission_action_reject">Deny</string>
-    <string name="empty_title_permission_apps_list">Empty</string>
-    <string name="hints_permission_apps_count">%d apps</string>
-    <string name="hints_get_root_enable_title">%d apps have root access</string>
-    <string name="hints_get_root_disable_title">"%d apps don't have root access"</string>
-    <string name="empty_title_root_apps">No apps have root access</string>
-    <string name="hints_remember_choice">Remember me</string>
-    <string name="root_apply_title">Important warning</string>
-    <string name="root_apply_step_1">Grant %s root access?</string>
-    <string name="root_apply_step_2">Granting apps root access may cause your device to become unstable.</string>
-    <string name="root_apply_step_3">The security of your userdata (accounts, password and messages) may be compromised.</string>
-    <string name="root_apply_step_4">Grant apps root access at your own risk.</string>
-    <string name="root_apply_step_5">Grant %s root access?</string>
-    <string name="button_text_accept">Accept</string>
-    <string name="button_text_accept_timer">Accept (%d)</string>
-    <string name="button_text_reject">Reject</string>
-    <string name="button_text_reject_timer">Reject (%d)</string>
-    <string name="button_text_next_step">Next</string>
-    <string name="button_text_next_step_timer">Next step (%d)</string>
-    <string name="toast_root_apply_accept">Root access granted to %s</string>
-    <string name="toast_root_apply_reject">Denied root access for %s</string>
-    <string name="permission_send_sms_descx">Apps can send SMS and MMS messages</string>
-    <string name="toast_backup_is_running">Backup is already running. Wait a bit and try again.</string>
-    <string name="toast_backup_uninstall_failed">Failed to back up %d apps. Wait a bit and try again.</string>
-    <string name="toast_backup_uninstall_success">Backup and uninstall complete</string>
-    <string name="toast_uninstall_success">Uninstall complete</string>
-    <string name="empty_title_system_cache_list">System cache empty</string>
-    <string name="empty_title_system_process_list">No system processes</string>
-    <string name="empty_title_virus_list">No viruses</string>
-    <string name="empty_title_risk_list">No risky apps</string>
-    <string name="button_text_create_shortcut">Create shortcut</string>
-    <string name="button_text_uninstall_shortcut">Uninstall shortcut</string>
-    <string name="toast_shortcut_install">Shortcut installed</string>
-    <string name="toast_shortcut_uninstall">Shortcut uninstalled</string>
-    <string name="toast_network_eror">Network error</string>
+    <string name="permission_group_title_settings_related">Impostazioni</string>
+    <string name="permission_group_title_others">Altro</string>
+    <string name="permission_action_accept">Accetta</string>
+    <string name="permission_action_prompt">Chiedi sempre</string>
+    <string name="permission_action_reject">Nega</string>
+    <string name="empty_title_permission_apps_list">Vuoto</string>
+    <string name="hints_permission_apps_count">%d app</string>
+    <string name="hints_get_root_enable_title">%d app con accesso root</string>
+    <string name="hints_get_root_disable_title">%d app senza accesso root</string>
+    <string name="empty_title_root_apps">Nessuna app con accesso root</string>
+    <string name="hints_remember_choice">Ricorda la mia scelta</string>
+    <string name="root_apply_title">Avviso importante</string>
+    <string name="root_apply_step_1">"Concedere a %s l'accesso come root?"</string>
+    <string name="root_apply_step_2">"Concedere l'accesso di root può portare il tuo dispositivo a diventare instabile."</string>
+    <string name="root_apply_step_3">La sicurezza dei tuoi dati utente(account, password e messaggi) potrebbe essere compromessa.</string>
+    <string name="root_apply_step_4">"Concedi l'accesso di root a tuo rischio."</string>
+    <string name="root_apply_step_5">"Concedere a %s l'accesso come root?"</string>
+    <string name="button_text_accept">Accetta</string>
+    <string name="button_text_accept_timer">Accetta (%d)</string>
+    <string name="button_text_reject">Rifiuta</string>
+    <string name="button_text_reject_timer">Rifiuta (%d)</string>
+    <string name="button_text_next_step">Avanti</string>
+    <string name="button_text_next_step_timer">Prossimo passo (%d)</string>
+    <string name="toast_root_apply_accept">Accesso come root concesso a %s</string>
+    <string name="toast_root_apply_reject">"E' stato negato l'accesso come root a %s"</string>
+    <string name="permission_send_sms_descx">Le app possono inviare messaggi SMS e MMS</string>
+    <string name="toast_backup_is_running">"Backup già in esecuzione. Attendi un po' e riprova."</string>
+    <string name="toast_backup_uninstall_failed">"Impossibile eseguire il backup di %d app. Attendi un po' e riprova."</string>
+    <string name="toast_backup_uninstall_success">Backup e disinstallazione completati</string>
+    <string name="toast_uninstall_success">Disinstallazione completata</string>
+    <string name="empty_title_system_cache_list">Cache di sistema vuota</string>
+    <string name="empty_title_system_process_list">Nessun processo di sistema</string>
+    <string name="empty_title_virus_list">Nessun virus</string>
+    <string name="empty_title_risk_list">Nessuna app pericolosa</string>
+    <string name="button_text_create_shortcut">Crea scorciatoia</string>
+    <string name="button_text_uninstall_shortcut">Rimuovi scorciatoia</string>
+    <string name="toast_shortcut_install">Scorciatoia creata</string>
+    <string name="toast_shortcut_uninstall">Scorciatoia rimossa</string>
+    <string name="toast_network_eror">Errore di rete</string>
     <string name="optimizecenter_data_support">Powered by Clean Master</string>
     <string name="antivirus_sec_support">Powered by Tencent</string>
-    <string name="hints_garbage_handle_item_empty_content">Empty</string>
-    <string name="hints_title_garbage">Trash</string>
-    <string name="toast_virus_in_cloud_scanning">"Can't stop scanning cloud"</string>
+    <string name="hints_garbage_handle_item_empty_content">Vuoto</string>
+    <string name="hints_title_garbage">Cestino</string>
+    <string name="toast_virus_in_cloud_scanning">Impossibile interrompere la scasione del cloud</string>
     <string name="activity_title_cache_data">Cache</string>
-    <string name="title_dev_yes">Developer options off</string>
-    <string name="title_dev_no">Developer options on</string>
-    <string name="summary_dev">Prevent apps from accessing userdata</string>
-    <string name="cache_sort_type_item_size">Sort by size</string>
-    <string name="cache_sort_type_item_name">Sort by name</string>
+    <string name="title_dev_yes">Opzioni svilippatore disattivate</string>
+    <string name="title_dev_no">Opzioni sviluppatore attivate</string>
+    <string name="summary_dev">Impedisci alle app di accedere ai dati utente</string>
+    <string name="cache_sort_type_item_size">Ordina per dimensione</string>
+    <string name="cache_sort_type_item_name">Ordina per nome</string>
 </resources>
