--- a/Italian/main/PhotoTable.apk/res/values-it/strings.xml
+++ b/Italian/main/PhotoTable.apk/res/values-it/strings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Photo Screensavers</string>
-    <string name="table_screensaver_name">Photo Table</string>
-    <string name="flipper_screensaver_name">Photo Frame</string>
-    <string name="posts_album_name">Photos from Posts</string>
-    <string name="unknown_album_name">Unnamed Album</string>
-    <string name="stock_photo_album_name">Stock Photos</string>
-    <string name="local_source_name">Photos on Device</string>
-    <string name="need_to_configure">No photos selected.</string>
-    <string name="photodream_select_all">Select All</string>
-    <string name="photodream_select_none">Deselect All</string>
-    <string name="no_photos">No photos on the device.</string>
+    <string name="app_name">Screensavers Fotografico</string>
+    <string name="table_screensaver_name">Tavolo di foto</string>
+    <string name="flipper_screensaver_name">Cornice con foto</string>
+    <string name="posts_album_name">Foto dai post</string>
+    <string name="unknown_album_name">Album senza nome</string>
+    <string name="stock_photo_album_name">Foto stock</string>
+    <string name="local_source_name">Foto sul dispositivo</string>
+    <string name="need_to_configure">Nessuna foto selezionata.</string>
+    <string name="photodream_select_all">Seleziona tutte</string>
+    <string name="photodream_select_none">Deseleziona tutte</string>
+    <string name="no_photos">Nessuna foto sul dispositivo.</string>
 </resources>
